--- a/packaging-client/styles/global.css
+++ b/packaging-client/styles/global.css
@@ -69,7 +69,7 @@ body {
 
   }
   
-  /* === Admin Panel Genel Kart Yapısı === */
+  /* === Admin Panel Kart  === */
 .admin-card {
   background-color: #ffffff;
   padding: 28px;
